--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@ function init() {
   // Bind our event handlers
   window.addEventListener('resize', onWindowResize, false);
 
+  // Create Scene
+  var geometry = new THREE.SphereGeometry( 5, 32, 32 );
+  var material = new THREE.MeshBasicMaterial( {color: 0xffff00} );
+  var sphere = new THREE.Mesh( geometry, material );
+  scene.add( sphere );
+
   // Kick off the render loop!
   update();
 }
