--- a/index.html
+++ b/index.html
@@ -169,9 +169,18 @@ function update() {
   // Update our perspective camera's positioning
   vrControls.update();
 
+  // Fetch the pose data from the current frame
+  var pose = vrFrameData.pose;
+
+  var pos = new THREE.Vector3(
+    pose.position[0],
+    pose.position[1],
+    pose.position[2]
+  );
+  sphere.position = pos + Vector3(0.0, 0.0, -10.0);
+
   // Render our three.js virtual scene
   renderer.clearDepth();
-  sphere.position = camera.position + Vector3(0.0, 0.0, -10.0);
   renderer.render(scene, camera);
 
   // Kick off the requestAnimationFrame to call this function
