--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ function update() {
     pose.position[1],
     pose.position[2]
   );
-  sphere.position = pos + Vector3(0.0, 0.0, -10.0);
+  sphere.position.copy(pos + Vector3(0.0, 0.0, -10.0));
 
   // Render our three.js virtual scene
   renderer.clearDepth();
