--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ function init() {
 
   // Create Scene
   var geometry = new THREE.SphereGeometry( 0.05, 32, 32 );
-  var material = new THREE.MeshBasicMaterial( {color: 0xffff00} );
+  var material = new THREE.MeshStandardMaterial( {color: 0xffff00} );
   sphere = new THREE.Mesh( geometry, material );
   scene.add( sphere );
 
