--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ function init() {
   window.addEventListener('resize', onWindowResize, false);
 
   // Create Scene
-  //scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
+  scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
   var geometry = new THREE.SphereGeometry( 0.05, 32, 32 );
   var material = new THREE.MeshBasicMaterial({color: 0xffff00});
 	//material.roughness = 0.5;
