--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@ function init() {
 
   // Create Scene
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
-  var geometry = new THREE.SphereGeometry( 0.05, 32, 32 );
+  var geometry = new THREE.TorusKnotGeometry( 0.05, 0.02, 100, 16 );
+  //var geometry = new THREE.SphereGeometry( 0.05, 32, 32 );
   var material = new THREE.MeshStandardMaterial();
 	material.roughness = 0.5;
 	material.metalness = 0.5;
