--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ function init() {
 	material.roughness = 0.5;
 	material.metalness = 0.5;
   sphere = new THREE.Mesh( geometry, material );
+  sphere.position = new THREE.Vector3(0.0, 10.0, -10.0);
   scene.add( sphere );
 
   // Kick off the render loop!
@@ -179,14 +180,14 @@ function update() {
   vrControls.update();
 
   // Fetch the pose data from the current frame
-  var pose = vrFrameData.pose;
+  /*var pose = vrFrameData.pose;
 
   var pos = new THREE.Vector3(
     pose.position[0],
     pose.position[1],
     pose.position[2]
   );
-  //sphere.position = pos + new THREE.Vector3(0.0, 10.0, -10.0);
+  sphere.position = pos + new THREE.Vector3(0.0, 10.0, -10.0);*/
 
   // Render our three.js virtual scene
   renderer.clearDepth();
