--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ function init() {
 
   // Create Scene
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
+
   var geometry = new THREE.TorusKnotGeometry( 0.05, 0.02, 100, 16 );
   //var geometry = new THREE.SphereGeometry( 0.05, 32, 32 );
   var material = new THREE.MeshStandardMaterial();
@@ -159,6 +160,12 @@ function init() {
   texture.wrapS = THREE.RepeatWrapping;
   texture.wrapT = THREE.RepeatWrapping;
   texture.repeat.set( 4, 4 );
+
+
+  var geometry = new THREE.PlaneGeometry( 2, 2, 32, 32 );
+  var material = new THREE.MeshBasicMaterial( {map : texture, side: THREE.DoubleSide} );
+  var plane = new THREE.Mesh( geometry, material );
+  scene.add( plane );
 
   // Kick off the render loop!
   update();
