--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@ function init() {
   var g = bitmap.getContext('2d');
   bitmap.width = 100;
   bitmap.height = 100;
-  g.font = 'Bold 20px Arial';
+  g.font = 'Bold 40px Arial';
 
-  g.fillStyle = 'white';
+  g.fillStyle = 'black';
   g.fillText(text, 0, 20);
   g.strokeStyle = 'black';
   g.strokeText(text, 0, 20);
