--- a/index.html
+++ b/index.html
@@ -144,14 +144,25 @@ function init() {
   // Create Scene
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
 
+  createProduct(new THREE.Vector3(0.0, 0.5, -1.0));
+  createProduct(new THREE.Vector3(0.0, -0.5, -1.0));
+
+
+  // Kick off the render loop!
+  update();
+}
+
+function createProduct(THREE.Vector3 position, )
+{
   var geometry = new THREE.TorusKnotGeometry( 0.05, 0.02, 100, 16 );
   //var geometry = new THREE.SphereGeometry( 0.05, 32, 32 );
   var material = new THREE.MeshStandardMaterial();
 	material.roughness = 0.5;
 	material.metalness = 0.5;
   mesh = new THREE.Mesh( geometry, material );
-  mesh.translateY(0.5);
-  mesh.translateZ(-0.5);
+  mesh.translateX(position.x);
+  mesh.translateY(position.y);
+  mesh.translateZ(position.z);
   scene.add( mesh );
 
   // Text
@@ -182,12 +193,11 @@ function init() {
   var geometry = new THREE.PlaneGeometry( 0.5, 0.5, 32, 32 );
   var material = new THREE.MeshBasicMaterial( {map : texture, side: THREE.DoubleSide} );
   var plane = new THREE.Mesh( geometry, material );
-  plane.translateY(0.5);
-  plane.translateZ(-0.5);
+  plane.translateX(position.x);
+  plane.translateY(position.y);
+  plane.translateZ(position.z);
   scene.add( plane );
 
-  // Kick off the render loop!
-  update();
 }
 
 /**
