--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ function init() {
   update();
 }
 
-function createProduct(THREE.Vector3 position)
+function createProduct(position)
 {
   var geometry = new THREE.TorusKnotGeometry( 0.05, 0.02, 100, 16 );
   //var geometry = new THREE.SphereGeometry( 0.05, 32, 32 );
