--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@ function init() {
   // Create Scene
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
 
-  createProduct(new THREE.Vector3(0.0, 0.5, -1.0));
-  createProduct(new THREE.Vector3(0.0, -0.5, -1.0));
+  createProduct(new THREE.Vector3(0.0, 0.5, -1.0), 'Hårbørste');
+  createProduct(new THREE.Vector3(0.0, -0.5, -1.0), 'Jeans');
 
 
   // Kick off the render loop!
   update();
 }
 
-function createProduct(position)
+function createProduct(position, text)
 {
   var geometry = new THREE.TorusKnotGeometry( 0.05, 0.02, 100, 16 );
   //var geometry = new THREE.SphereGeometry( 0.05, 32, 32 );
@@ -172,7 +172,6 @@ function createProduct(position)
   //texture.wrapT = THREE.RepeatWrapping;
   //texture.repeat.set( 1, 1 );
   //create image
-  var text = 'Test tekst.'
   var bitmap = document.createElement('canvas');
   var g = bitmap.getContext('2d');
   bitmap.width = 100;
