--- a/index.html
+++ b/index.html
@@ -223,14 +223,21 @@ function update() {
   vrControls.update();
 
   // Fetch the pose data from the current frame
-  /*var pose = vrFrameData.pose;
+  var pose = vrFrameData.pose;
 
   var pos = new THREE.Vector3(
     pose.position[0],
     pose.position[1],
     pose.position[2]
   );
-  sphere.position = pos + new THREE.Vector3(0.0, 10.0, -10.0);*/
+  if(pose.distanceTo(mesh.position) < 0.5)
+  {
+    mesh.visible = false;
+  }
+  else {
+    mesh.visible = true;
+  }
+
   mesh.rotation.x += 0.01;
 	mesh.rotation.y += 0.01;
 
