--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ function init() {
   // Create Scene
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
 
-  createProduct(new THREE.Vector3(0.0, 0.5, -1.0), 'Hårbørste');
+  createProduct(new THREE.Vector3(0.0, 0.5, -1.0), 'T-shirt');
   createProduct(new THREE.Vector3(0.0, -0.5, -1.0), 'Jeans');
 
 
