--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@ function init() {
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
 
   createProduct(new THREE.Vector3(0.0, 0.5, -1.0), 'T-shirt');
-  createProduct(new THREE.Vector3(0.0, -0.5, -1.0), 'Jeans');
-
+  createProduct(new THREE.Vector3(0.0, 0.0, -1.0), 'Jeans');
+  createProduct(new THREE.Vector3(0.3, 0.0, -1.0), 'Shoes');
+  createProduct(new THREE.Vector3(0.3, 0.5, -1.0), 'Dress');
 
   // Kick off the render loop!
   update();
