--- a/index.html
+++ b/index.html
@@ -239,15 +239,10 @@ function update() {
   {
     var product = products[i];
     var dist = pos.distanceTo(product.anchor.position);
-    if(dist < 1.0)
-    {
-      product.animation = Math.max(1.0, product.animation + currentTime);
-      product.description.scale = product.animation;
-      product.description.visible = true;
-    }
-    if(product.animation < 0.00001) {
-      product.description.visible = false;
-    }
+    product.animation = Math.min(1.0, Math.max(0.0, dist < 1.0 ? product.animation + currentTime : product.animation - currentTime));
+    product.description.scale = new THREE.Vector3(product.animation, product.animation, product.animation);
+
+    product.description.visible = product.animation > 0.00001;
 
     product.anchor.rotation.x += 0.01;
   	product.anchor.rotation.y += 0.01;
