--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ function init() {
   // Create Scene
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
 
-  createProduct(new THREE.Vector3(-0.3, 0.5, -1.0), 'T-shirt');
+  createProduct(new THREE.Vector3(-0.3, 0.5, -1.0), 'T-shirt2');
   createProduct(new THREE.Vector3(-0.3, 0.0, -1.0), 'Jeans');
   createProduct(new THREE.Vector3(0.3, 0.0, -1.0), 'Shoes');
   createProduct(new THREE.Vector3(0.3, 0.5, -1.0), 'Dress');
@@ -239,7 +239,7 @@ function update() {
   {
     var product = products[i];
     var dist = pos.distanceTo(product.anchor.position);
-    var animation = product.animation + 0.001 * currentTime * ( dist < 1.0 ? 1.0 : - 1.0 );
+    var animation = product.animation + 0.0000001 * currentTime * ( dist < 1.0 ? 1.0 : - 1.0 );
     product.animation = Math.min(1.0, Math.max(0.0, animation));
     product.description.scale = new THREE.Vector3(product.animation, product.animation, product.animation);
 
