--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@ function createProduct(position, text)
 	material.roughness = 0.5;
 	material.metalness = 0.5;
   var mesh = new THREE.Mesh( geometry, material );
-  mesh.translateX(position.x);
-  mesh.translateY(position.y);
-  mesh.translateZ(position.z);
+  mesh.position.set(position);
   scene.add( mesh );
 
   // Text
@@ -193,9 +191,7 @@ function createProduct(position, text)
   var geometry = new THREE.PlaneGeometry( 0.5, 0.5, 32, 32 );
   var material = new THREE.MeshBasicMaterial( {map : texture, side: THREE.DoubleSide} );
   var textGeometry = new THREE.Mesh( geometry, material );
-  textGeometry.translateX(position.x);
-  textGeometry.translateY(position.y);
-  textGeometry.translateZ(position.z);
+  textGeometry.position.set(position + new THREE.Vector3(0.5, -0.5, 0.0));
   scene.add( textGeometry );
   var product = {anchor:mesh, description:textGeometry, animation:0.0};
   products.push(product);
