--- a/index.html
+++ b/index.html
@@ -193,8 +193,9 @@ function createProduct(position, text)
   var geometry = new THREE.PlaneGeometry( 0.5, 0.5, 32, 32 );
   var material = new THREE.MeshBasicMaterial( {map : texture, side: THREE.DoubleSide} );
   var textGeometry = new THREE.Mesh( geometry, material );
-  var p = position + new THREE.Vector3(0.5, -0.5, 0.0);
-  textGeometry.position.set(p.x, p.y, p.z);
+  textGeometry.translateX(position.x + 0.5);
+  textGeometry.translateY(position.y - 0.5);
+  textGeometry.translateZ(position.z);
   scene.add( textGeometry );
   var product = {anchor:mesh, description:textGeometry, animation:0.0};
   products.push(product);
