--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ function createProduct(position, text)
 	material.roughness = 0.5;
 	material.metalness = 0.5;
   var mesh = new THREE.Mesh( geometry, material );
-  mesh.translateX(position.x);
+  mesh.position.set(position.x, position.y, position.z);
   mesh.translateY(position.y);
   mesh.translateZ(position.z);
   scene.add( mesh );
@@ -193,7 +193,7 @@ function createProduct(position, text)
   var geometry = new THREE.PlaneGeometry( 0.5, 0.5, 32, 32 );
   var material = new THREE.MeshBasicMaterial( {map : texture, side: THREE.DoubleSide} );
   var textGeometry = new THREE.Mesh( geometry, material );
-  textGeometry.position.set(position.x + 0.1, position.y - 0.1, position.z);
+  textGeometry.position.set(position.x + 0.01, position.y - 0.01, position.z);
   scene.add( textGeometry );
   var product = {anchor:mesh, description:textGeometry, animation:0.0};
   products.push(product);
