--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@ function init() {
   // Create Scene
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
 
-  createProduct(new THREE.Vector3(-0.3, 0.5, -1.0), 'Fundamentally, ARCore is doing two things: tracking the position of the mobile device as it moves,'+
-  'and building its own understanding of the real world. ARCores motion tracking technology uses the phones camera to identify interesting points,' +
-  'called features, and tracks how those points move over time. With a combination of the movement of these points and readings from the phones' +
+  createProduct(new THREE.Vector3(-0.3, 0.5, -1.0), 'Fundamentally, ARCore is doing two things: tracking the position of the mobile device as it moves,\n'+
+  'and building its own understanding of the real world. ARCores motion tracking technology uses the phones camera to identify interesting points,\n' +
+  'called features, and tracks how those points move over time. With a combination of the movement of these points and readings from the phones\n' +
   'inertial sensors, ARCore determines both the position and orientation of the phone as it moves through space.');
   createProduct(new THREE.Vector3(-0.3, 0.0, -1.0), 'Jeans');
   createProduct(new THREE.Vector3(0.3, 0.0, -1.0), 'Shoes');
@@ -176,8 +176,8 @@ function createProduct(position, text)
   //create image
   var bitmap = document.createElement('canvas');
   var g = bitmap.getContext('2d');
-  bitmap.width = 300;
-  bitmap.height = 300;
+  bitmap.width = 200;
+  bitmap.height = 200;
   g.font = 'Bold 10px Arial';
 
   g.fillStyle = 'black';
@@ -191,7 +191,7 @@ function createProduct(position, text)
   texture.magFilter = THREE.NearestFilter;
   texture.minFilter = THREE.NearestFilter;
 
-  var geometry = new THREE.PlaneGeometry( 1.5, 1.5, 32, 32 );
+  var geometry = new THREE.PlaneGeometry( 1.0, 1.0, 32, 32 );
   var material = new THREE.MeshBasicMaterial( {map : texture, side: THREE.DoubleSide} );
   var textGeometry = new THREE.Mesh( geometry, material );
   textGeometry.position.set(position.x + 0.01, position.y - 0.01, position.z);
