--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@ function init() {
   // Create Scene
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
 
-  createProduct(new THREE.Vector3(-0.3, 0.5, -1.0), 'Fundamentally, ARCore is doing two things: tracking the position of the mobile device as it moves,\n'+
-  'and building its own understanding of the real world. ARCores motion tracking technology uses the phones camera to identify interesting points,\n' +
-  'called features, and tracks how those points move over time. With a combination of the movement of these points and readings from the phones\n' +
+  createProduct(new THREE.Vector3(-0.3, 0.5, -1.0), 'Fundamentally, ARCore is doing two things: tracking the position of the mobile device as it moves,'+
+  'and building its own understanding of the real world. ARCores motion tracking technology uses the phones camera to identify interesting points,' +
+  'called features, and tracks how those points move over time. With a combination of the movement of these points and readings from the phones' +
   'inertial sensors, ARCore determines both the position and orientation of the phone as it moves through space.');
   createProduct(new THREE.Vector3(-0.3, 0.0, -1.0), 'Jeans');
   createProduct(new THREE.Vector3(0.3, 0.0, -1.0), 'Shoes');
@@ -188,13 +188,13 @@ function createProduct(position, text)
   // canvas contents will be used for a texture
   var texture = new THREE.Texture(bitmap)
   texture.needsUpdate = true;
-  texture.magFilter = THREE.NearestFilter;
-  texture.minFilter = THREE.NearestFilter;
+  //texture.magFilter = THREE.NearestFilter;
+  //texture.minFilter = THREE.NearestFilter;
 
   var geometry = new THREE.PlaneGeometry( 1.0, 1.0, 32, 32 );
   var material = new THREE.MeshBasicMaterial( {map : texture, side: THREE.DoubleSide} );
   var textGeometry = new THREE.Mesh( geometry, material );
-  textGeometry.position.set(position.x + 0.01, position.y - 0.01, position.z);
+  textGeometry.position.set(position.x, position.y, position.z);
   scene.add( textGeometry );
   var product = {anchor:mesh, description:textGeometry, animation:0.0};
   products.push(product);
