--- a/index.html
+++ b/index.html
@@ -144,16 +144,10 @@ function init() {
   // Create Scene
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
 
-  createProduct(new THREE.Vector3(-0.3, 0.5, -1.0), '<!DOCTYPE html>'+
-'<html>'+
-'<head>'+
-'<title>Page Title</title>'+
-'</head>'+
-'<body>'+
-'<h1>This is a Heading</h1>'+
-'<p>This is a paragraph.</p>'+
-'</body>' +
-'</html>');
+  createProduct(new THREE.Vector3(-0.3, 0.5, -1.0), 'Fundamentally, ARCore is doing two things: tracking the position of the mobile device as it moves,\n'+
+'and building its own understanding of the real world. ARCores motion tracking technology uses the phones camera to identify interesting points,\n' +
+'called features, and tracks how those points move over time. With a combination of the movement of these points and readings from the phones\n' +
+'inertial sensors, ARCore determines both the position and orientation of the phone as it moves through space.');
   createProduct(new THREE.Vector3(-0.3, 0.0, -1.0), 'Jeans');
   createProduct(new THREE.Vector3(0.3, 0.0, -1.0), 'Shoes');
   createProduct(new THREE.Vector3(0.3, 0.5, -1.0), 'Dress');
@@ -185,11 +179,13 @@ function createProduct(position, text)
   bitmap.width = 200;
   bitmap.height = 200;
   g.font = 'Bold 10px Arial';
-
   g.fillStyle = 'black';
-  g.fillText(text, 0, 10);
   g.strokeStyle = 'black';
-  g.strokeText(text, 0, 10);
+
+  wrapText(g, text, 20, 20, 180, 12);
+
+  //g.fillText(text, 0, 10);
+  //g.strokeText(text, 0, 10);
 
   // canvas contents will be used for a texture
   var texture = new THREE.Texture(bitmap)
@@ -282,6 +278,35 @@ function onWindowResize () {
   camera.aspect = window.innerWidth / window.innerHeight;
   camera.updateProjectionMatrix();
   renderer.setSize(window.innerWidth, window.innerHeight);
+}
+
+function wrapText(context, text, x, y, maxWidth, lineHeight)
+{
+  var cars = text.split("\n");
+
+  for (var ii = 0; ii < cars.length; ii++) {
+
+      var line = "";
+      var words = cars[ii].split(" ");
+
+      for (var n = 0; n < words.length; n++) {
+          var testLine = line + words[n] + " ";
+          var metrics = context.measureText(testLine);
+          var testWidth = metrics.width;
+
+          if (testWidth > maxWidth) {
+              context.fillText(line, x, y);
+              line = words[n] + " ";
+              y += lineHeight;
+          }
+          else {
+              line = testLine;
+          }
+      }
+
+      context.fillText(line, x, y);
+      y += lineHeight;
+  }
 }
 </script>
 </body>
