--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@ function init() {
   // Create Scene
   scene.add( new THREE.DirectionalLight( 0xffffff, 0.5 ) );
 
-  createProduct(new THREE.Vector3(-0.3, 0.5, -1.0), 'Fundamentally, ARCore is doing two things: tracking the position of the mobile device as it moves,\n'+
-'and building its own understanding of the real world. ARCores motion tracking technology uses the phones camera to identify interesting points,\n' +
-'called features, and tracks how those points move over time. With a combination of the movement of these points and readings from the phones\n' +
+  createProduct(new THREE.Vector3(-0.3, 0.5, -1.0), 'Fundamentally, ARCore is doing two things: \ntracking the position of the mobile device as it moves,'+
+'and building its own understanding of the real world. \nARCores motion tracking technology uses the phones camera to identify interesting points,' +
+'called features, and tracks how those points move over time. With a combination of the movement of these points and readings from the phones' +
 'inertial sensors, ARCore determines both the position and orientation of the phone as it moves through space.');
   createProduct(new THREE.Vector3(-0.3, 0.0, -1.0), 'Jeans');
   createProduct(new THREE.Vector3(0.3, 0.0, -1.0), 'Shoes');
