--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@ function createProduct(position, text)
   var marginX = bitmap.width/10;
   var marginY = bitmap.height/10;
   var lineHeight = 40;
-  g.font = '30px Open Sans';
-  g.fillStyle = 'black';
+  g.font = 'Semi-Bold 30px Open Sans';
+  g.fillStyle = 'rgba(255, 255, 255, 0.5)';
+  g.fillRect(0, 0, bitmap.width, bitmap.height);
   g.strokeStyle = 'black';
 
   wrapText(g, text, marginX, marginY + lineHeight, bitmap.width - 2 * marginX, lineHeight);
