--- a/index.html
+++ b/index.html
@@ -182,10 +182,12 @@ function createProduct(position, text)
   var marginY = bitmap.height/10;
   var lineHeight = 40;
   g.font = 'Semi-Bold 30px Open Sans';
-  g.fillStyle = 'rgba(255, 255, 0, 0.5)';
+  g.fillStyle = 'rgba(120, 160, 255, 0.1)';
   g.fillRect(0, 0, bitmap.width, bitmap.height);
+  g.fillStyle = 'rgba(255, 255, 255, 0.5)';
+  g.fillRect(marginX, marginY, bitmap.width - 2 * marginX, bitmap.height - 2 * marginY);
   g.fillStyle = 'black';
-  g.strokeStyle = 'red';
+  g.strokeStyle = 'black';
 
   wrapText(g, text, marginX, marginY + lineHeight, bitmap.width - 2 * marginX, lineHeight);
 
