--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ function createProduct(position, text)
   var marginX = bitmap.width/10;
   var marginY = bitmap.height/10;
   var lineHeight = 40;
-  g.font = 'Semi-Bold 30px Open Sans';
+  g.font = '30px Open Sans';
   g.fillStyle = 'rgba(120, 160, 255, 0.1)';
   g.fillRect(0, 0, bitmap.width, bitmap.height);
   g.fillStyle = 'rgba(255, 255, 255, 0.5)';
