--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@ function createProduct(position, text)
   var marginX = lineHeight * 2;
   var marginY = lineHeight * 2;
   g.font = 'Semi-Bold 70px Open Sans';
-  g.fillStyle = 'rgba(120, 160, 255, 0.1)';
+  g.fillStyle = 'rgba(120, 160, 255)';
   g.fillRect(0, 0, bitmap.width, bitmap.height);
-  g.fillStyle = 'rgba(150, 150, 150, 0.5)';
+  g.fillStyle = 'rgba(150, 150, 150)';
   g.fillRect(marginX, marginY, bitmap.width - 2 * marginX, bitmap.height - 2 * marginY);
   g.fillStyle = 'black';
   g.strokeStyle = 'black';
