--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@ function createProduct(position, text)
   g.font = 'Semi-Bold 70px Open Sans';
   g.fillStyle = 'rgba(120, 160, 255)';
   g.fillRect(0, 0, bitmap.width, bitmap.height);
-  g.fillStyle = 'rgba(150, 150, 150)';
-  g.fillRect(marginX, marginY, bitmap.width - 2 * marginX, bitmap.height - 2 * marginY);
+  //g.fillStyle = 'rgba(150, 150, 150)';
+  //g.fillRect(marginX, marginY, bitmap.width - 2 * marginX, bitmap.height - 2 * marginY);
   g.fillStyle = 'black';
   g.strokeStyle = 'black';
 
