--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@ function createProduct(position, text)
   var g = bitmap.getContext('2d');
   bitmap.width = 800;
   bitmap.height = 800;
-  var lineHeight = bitmap.height/10;
+  var lineHeight = 40;
   var marginX = lineHeight * 2;
   var marginY = lineHeight * 2;
-  g.font = 'Semi-Bold 70px Open Sans';
+  g.font = 'Semi-Bold 36px Open Sans';
   //g.fillStyle = 'rgba(120, 160, 255)';
   //g.fillRect(0, 0, bitmap.width, bitmap.height);
   //g.fillStyle = 'rgba(150, 150, 150)';
