--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -17,14 +17,19 @@
 	<div id="background" class="content">
 
 	</div>
+	<div id="views" class="content">
 
-	<div id="welcome" class="content">
-		welcome
+		<div id="welcome" class="content">
+			<div id="logo"></div>
+			welcome
+		</div>
+
+		<div id="productInfo" class="content">
+			product info
+		</div>
 	</div>
 
-	<div id="productInfo" class="content">
-		product info
-	</div>
+
 
 </body>
 
