--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@ function createProduct(position, text)
   var lineHeight = 40;
   var marginX = lineHeight * 2;
   var marginY = lineHeight * 2;
-  //g.fillStyle = 'rgba(120, 120, 120, 0.5)';
-  //g.fillRect(0, 0, bitmap.width, bitmap.height);
+  g.fillStyle = 'rgba(120, 120, 120, 0.5)';
+  g.fillRect(0, 0, bitmap.width, bitmap.height);
   //g.fillStyle = 'rgba(150, 150, 150)';
   //g.fillRect(marginX, marginY, bitmap.width - 2 * marginX, bitmap.height - 2 * marginY);
   g.font = 'Semi-Bold 36px Open Sans';
