--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@ function createProduct(position, text)
   var lineHeight = 40;
   var marginX = lineHeight * 2;
   var marginY = lineHeight * 2;
-  //g.fillStyle = 'rgba(120, 120, 120, 0.5)';
-  //g.fillRect(0, 0, bitmap.width, bitmap.height);
+  g.fillStyle = 'rgb(120, 120, 120)';
+  g.fillRect(0, 0, bitmap.width, bitmap.height);
   //g.fillStyle = 'rgba(150, 150, 150)';
   //g.fillRect(marginX, marginY, bitmap.width - 2 * marginX, bitmap.height - 2 * marginY);
-  g.font = 'Semi-Bold 36px Open Sans';
+  g.font = 'Semi-Bold 70px Open Sans';
   g.fillStyle = 'black';
   g.strokeStyle = 'black';
 
