--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@ function createProduct(position, text)
   var lineHeight = 40;
   var marginX = lineHeight * 2;
   var marginY = lineHeight * 2;
-  g.fillStyle = 'rgb(120, 120, 120)';
+  g.fillStyle = 'rgb(94, 122, 155)';
   g.fillRect(0, 0, bitmap.width, bitmap.height);
   //g.fillStyle = 'rgba(150, 150, 150)';
   //g.fillRect(marginX, marginY, bitmap.width - 2 * marginX, bitmap.height - 2 * marginY);
   g.font = '36px Open Sans';
-  g.fillStyle = 'black';
-  g.strokeStyle = 'black';
+  g.fillStyle = 'white';
+  g.strokeStyle = 'white';
 
   wrapText(g, text, marginX, marginY + lineHeight, bitmap.width - 2 * marginX, lineHeight);
 
